# wasm-explorer

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: deploy.yaml  main.yaml
component/: Cargo.toml
component/src/: bindings.rs  lib.rs
component/wit/: world.wit
crate/: Cargo.toml
crate/src/: lib.rs
crates/component/: Cargo.toml
crates/component/src/: lib.rs
crates/component/wit/: world.wit
crates/waside/: Cargo.toml  README.md
crates/waside/.github/workflows/: ci.yml
crates/waside/crates/waside/: Cargo.toml
crates/waside/crates/waside-cli/: Cargo.toml
crates/waside/crates/waside-cli/src/: main.rs  term_color_printer.rs
crates/waside/crates/waside/fuzz/: Cargo.toml
crates/waside/crates/waside/fuzz/fuzz_targets/: print_oracle.rs  roundtrip.rs  roundtrip_raw.rs
crates/waside/crates/waside/src/: decode.rs  encode.rs  error.rs  lib.rs  print.rs  printer.rs  span.rs
crates/waside/crates/waside/src/ast/: const_expr.rs  custom.rs  data.rs  elements.rs  exports.rs  functions.rs  globals.rs  imports.rs  instructions.rs  memories.rs  mod.rs  module.rs  names.rs  tables.rs  tags.rs  types.rs
crates/waside/crates/waside/tests/: roundtrip.rs
crates/waside/tests/local/: fuzz_atomic_memarg.wasm  fuzz_deep_nesting.wasm  fuzz_extract_lane.wasm  fuzz_null_byte.wasm  fuzz_ref_cast_funcref.wasm  fuzz_ref_test_name.wasm
crates/waside/utils/wast-extract/: Cargo.toml
crates/waside/utils/wast-extract/src/: main.rs
css/: index.css
js/: index.ts
pages/: index.html  style.css
server/: main.go
src/: Api.ts  App.tsx  Messages.ts  Module.ts  Worker.ts  WorkerCore.ts  api.ts  app.tsx  index.tsx  messages.ts  module.tsx  treeUtils.ts  utilities.ts  utilities.tsx  worker.ts
src/components/: ItemPicker.tsx  Modal.tsx  ResizableColumns.tsx  ShareButton.tsx  Toolbar.tsx  TreeView.tsx  WatViewer.tsx
tests/: setup.ts
tests/e2e/: explorer.test.ts
tests/unit/: Api.test.ts  Utilities.test.ts
tests/unit/components/: TreeView.test.tsx  WatViewer.test.tsx
vscode-extension/: .gitignore  .vscodeignore  build.mjs  package.json  tsconfig.json  tsconfig.webview.json
vscode-extension/src/: WasmEditorProvider.ts  extension.ts
vscode-extension/webview/: Worker.ts  main.tsx  vscode-overrides.css
