[package]
name = "component"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1" }
wasmprinter = { version = "0.235.0" }
wasmparser = { version = "0.235.0" }
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]
test = false
doctest = false
doc = false

[package.metadata.component]
package = "component:component"

[package.metadata.component.dependencies]
