[package]
name = "component"
publish = false
edition = "2021"

[dependencies]
waside = { path = "../waside/crates/waside" }
wat = { version = "1.245" }
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]
test = false
doctest = false
doc = false

[package.metadata.component]
package = "component:component"

[package.metadata.component.dependencies]
